--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
     {
       "matches": ["<all_urls>"],
       "include_globs": ["*reddit*"],
-      "js": ["contentScript.js"]
+      "js": ["contentScript.js"],
+      "run_at": "document_start"
     }
   ]
 }
